@@ -84,6 +84,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   Special:Preferences
 * Interlanguage links display the page title in their tooltip.
 * (bug 23621) New Special:ComparePages to compare (diff) two articles.
+* (bug 4597) Provide support in Special:Contributions to show only "current"
+  contributions
 
 === Bug fixes in 1.17 ===
 * (bug 17560) Half-broken deletion moved image files to deletion archive
